--- a/src/app/features/post-login/issue/update-issue/update-issue.component.html
+++ b/src/app/features/post-login/issue/update-issue/update-issue.component.html
@@ -347,9 +347,9 @@
   <app-loading-complete-dialog
     [visible]="isLoading"
     [completed]="submitCompleted"
-    [header]="'Đánh giá'"
+    [header]="'Cập nhật'"
     [progress]="'Vui lòng đợi trong giây lát'"
-    [complete]="'Đánh giá thành công'"
+    [complete]="'Cập nhật thành công'"
   ></app-loading-complete-dialog>
   <div class="col-md-8 issue-content">
     <div class="mb-2 issue-name">
