--- a/src/app/features/post-login/guidance-document/guidance-document-detail/guidance-document-detail.component.scss
+++ b/src/app/features/post-login/guidance-document/guidance-document-detail/guidance-document-detail.component.scss
@@ -1,5 +1,7 @@
 @import "../../../../../assets/scss/base";
-
+* {
+  font-size: 16px;
+}
 
 .font-weight-bold {
   font-weight: bold;
@@ -17,7 +19,39 @@
     height: 5rem;
     color: $primary;
   }
-  p{
+  p {
+    color: $primary;
+  }
+}
+.file-item {
+  background-color: #f9fafb;
+  border-radius: 10px;
+  font-size: 16px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+
+  .file-item-icon {
+    img {
+      width: 100%;
+      height: 100px;
+    }
+  }
+
+  .file-item-content {
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: rgb(244, 244, 244);
+  }
+}
+
+.file-item-empty {
+  background-color: #f9fafb;
+  border-radius: 10px;
+  font-size: 16px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  i {
+    font-size: 2.5rem;
     color: $primary;
   }
 }
