--- a/src/app/components/user-profile/change-password/change-password.component.html
+++ b/src/app/components/user-profile/change-password/change-password.component.html
@@ -1,31 +1,32 @@
 <p-dialog header="Thay đổi mật khẩu"
           [(visible)]="visible"
-          [style]="{width: '30vw', height: '30vw'}"
+          [style]="{width: '25vw', height: '30vw'}"
           (onHide)="resetVisible()"
           [modal]="true"
+          [draggable]="false"
 >
 <form [formGroup]="form">
   <div>
-    <div>
-      <label>Mật khẩu hiện tại</label>
-      <input type="password" formControlName="password" class="form-control">
+    <div class="mb-2">
+      <label class="fw-medium mb-1">Mật khẩu hiện tại<span class="p-error">*</span></label>
+      <input pInputText type="password" formControlName="password" class="form-control">
       <span class="p-error" *ngIf="isError('password', 'whitespace') || isBlank('password')">Mục này không được trống</span>
     </div>
-    <div>
-      <label>Mật khẩu mới</label>
-      <input type="password" formControlName="changePassword" class="form-control">
+    <div class="mb-2">
+      <label class="fw-medium mb-1">Mật khẩu mới<span class="p-error">*</span></label>
+      <input pInputText type="password" formControlName="changePassword" class="form-control">
       <span class="p-error" *ngIf="isError('changePassword', 'weakPassword') || isBlank('changePassword')">Mật khẩu phải có ít nhất 8 ký tự, 1 ký tự đặc biệt, 1 chữ viết hoa và 1 con số</span>
     </div>
-    <div>
-      <label>Nhập lại mật khẩu mới</label>
-      <input type="password" formControlName="confirmPassword" class="form-control">
+    <div class="mb-2">
+      <label class="fw-medium mb-1">Nhập lại mật khẩu mới<span class="p-error">*</span></label>
+      <input pInputText type="password" formControlName="confirmPassword" class="form-control">
       <span class="p-error" *ngIf="(form.hasError('passwordMismatch') && form.get('confirmPassword')?.dirty) || isBlank('confirmPassword')">
         Mật khẩu không trùng
       </span>
     </div>
   </div>
 </form>
-  <button class="btn btn-primary" (click)="confirm()">Xác nhận</button>
+  <button pButton class="confirm-button mt-3" (click)="confirm()">Xác nhận</button>
 </p-dialog>
 <p-toast key="error" position="top-right"></p-toast>
 
