fix css assign assignment

--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -326,7 +326,7 @@
           <div class="col-md-8">
             <div class="mb-1">
               <span class="mb-2 span-heading-color">Tên kế hoạch</span>
-              <p class="fw-bold p-content-fs">
+              <p class="fw-medium p-content-fs">
                 {{ schoolinitiationplan.initiationPlanName }}
               </p>
             </div>
@@ -334,7 +334,7 @@
           <div class="col-md-4">
             <div class="mb-1">
               <span class="mb-2 text-black-50">Người lên kế hoạch</span>
-              <p class="fw-bold p-content-fs">
+              <p class="fw-medium p-content-fs">
                 {{ schoolinitiationplan.createdBy }}
               </p>
             </div>
@@ -345,7 +345,7 @@
           <div class="col-md-8">
             <div class="mb-1">
               <span class="mb-2 span-heading-color">Trường</span>
-              <p class="fw-bold p-content-fs">
+              <p class="fw-medium p-content-fs">
                 {{ schoolinitiationplan.school.schoolName }}
               </p>
             </div>
@@ -374,7 +374,7 @@
           <div class="col-md-8">
             <div class="mb-1">
               <span class="mb-2 text-black-50">Ngày tạo</span>
-              <p class="fw-bold p-content-fs">
+              <p class="fw-medium p-content-fs">
                 {{ schoolinitiationplan.createdDate | date : "dd/MM/yyyy" }}
               </p>
             </div>
@@ -382,7 +382,7 @@
           <div class="col-md-4">
             <div class="mb-1">
               <span class="mb-2 text-black-50">Hạn nộp</span>
-              <p class="fw-bold p-error">
+              <p class="fw-medium p-error">
                 {{ schoolinitiationplan?.deadline | date : "dd/MM/yyyy" }}
               </p>
             </div>
@@ -420,13 +420,13 @@
           <div class="row col-md-10 d-flex align-items-end mb-3">
             <div class="col-md-8">
               <p class="mb-0">
-                <span class="fw-bold"
+                <span class="fw-medium"
                   >{{ lastDocs.schoolDocument.documentName }}.pdf</span
                 ><span></span>
               </p>
               <p class="mb-0">
                 <span>Mã tài liệu: </span>
-                <span class="fw-bold">{{
+                <span class="fw-medium">{{
                   lastDocs.schoolDocument.documentCode
                 }}</span>
               </p>
@@ -434,13 +434,13 @@
             <div class="col-md-4 text-end">
               <p class="mb-0">
                 <!-- <span>Kích thước: </span> -->
-                <span class="fw-bold">{{
+                <span class="fw-medium">{{
                   lastDocs.schoolDocument.sizeFormat
                 }}</span>
               </p>
               <p class="mb-0">
                 <!-- <span>Ngày tạo: </span> -->
-                <span class="fw-bold">{{
+                <span class="fw-medium">{{
                   lastDocs.schoolDocument.uploadedDate | date : "dd/MM/yyyy"
                 }}</span>
               </p>
@@ -546,13 +546,13 @@
               <div class="row col-md-10 d-flex align-items-end mb-3">
                 <div class="col-md-8">
                   <p class="mb-0">
-                    <span class="fw-bold"
+                    <span class="fw-medium"
                       >{{ lastDocs.departmentDocument.documentName }}.pdf</span
                     ><span></span>
                   </p>
                   <p class="mb-0">
                     <span>Mã tài liệu: </span>
-                    <span class="fw-bold">{{
+                    <span class="fw-medium">{{
                       lastDocs.departmentDocument.documentCode
                     }}</span>
                   </p>
@@ -560,13 +560,13 @@
                 <div class="col-md-4 text-end">
                   <p class="mb-0">
                     <!-- <span>Kích thước: </span> -->
-                    <span class="fw-bold">{{
+                    <span class="fw-medium">{{
                       lastDocs.departmentDocument.sizeFormat
                     }}</span>
                   </p>
                   <p class="mb-0">
                     <!-- <span>Ngày tạo: </span> -->
-                    <span class="fw-bold">{{
+                    <span class="fw-medium">{{
                       lastDocs.departmentDocument.uploadedDate
                         | date : "dd/MM/yyyy"
                     }}</span>
