--- a/src/app/features/post-login/guidance-document/guidance-document-detail/guidance-document-detail.component.html
+++ b/src/app/features/post-login/guidance-document/guidance-document-detail/guidance-document-detail.component.html
@@ -65,22 +65,22 @@
             <div class="row col-md-10 d-flex align-items-end mb-3">
               <div class="col-md-8">
                 <p class="mb-0">
-                  <span class="fw-bold">{{ document.documentName }}</span>
-                  <span class="fw-bold">.pdf</span>
+                  <span class="fw-medium">{{ document.documentName }}</span>
+                  <span class="fw-medium">.pdf</span>
                 </p>
                 <p class="mb-0">
                   <span>Mã tài liệu: </span>
-                  <span class="fw-bold">{{ document.documentCode }}</span>
+                  <span class="fw-medium">{{ document.documentCode }}</span>
                 </p>
               </div>
               <div class="col-md-4 text-end">
                 <p class="mb-0">
                   <span>Kích thước: </span>
-                  <span class="fw-bold">{{ document.sizeFormat }}</span>
+                  <span class="fw-medium">{{ document.sizeFormat }}</span>
                 </p>
                 <p class="mb-0">
                   <span>Ngày tạo: </span>
-                  <span class="fw-bold">{{
+                  <span class="fw-medium">{{
                     document.uploadedDate | date : "dd/MM/yyyy"
                   }}</span>
                 </p>
@@ -92,7 +92,7 @@
               class="file-item-empty mt-2 py-3 d-flex flex-column justify-content-around align-items-center"
             >
               <i class="bi bi-file-earmark-x-fill"></i>
-              <p class="fw-bolder mt-2">Tài liệu hiện đang không tồn tại</p>
+              <p class="fw-mediumer mt-2">Tài liệu hiện đang không tồn tại</p>
             </div>
           </ng-template>
         </ng-container>
