--- a/src/app/features/post-login/issue/issue-detail/issue-detail.component.html
+++ b/src/app/features/post-login/issue/issue-detail/issue-detail.component.html
@@ -35,30 +35,30 @@
           <div class="row col-md-10 d-flex align-items-end mb-3">
             <div class="col-md-8">
               <p class="mb-0">
-                <span class="fw-bold">{{ document.documentName }}</span>
-                <span class="fw-bold">.pdf</span>
+                <span class="fw-medium">{{ document.documentName }}</span>
+                <span class="fw-medium">.pdf</span>
               </p>
               <p class="mb-0">
                 <span>Loại tài liệu: </span>
-                <span class="fw-bold">{{
+                <span class="fw-medium">{{
                   document.documentType.documentTypeName
                 }}</span>
               </p>
               <p class="mb-0">
                 <span>Mã tài liệu: </span>
-                <span class="fw-bold">{{ document.documentCode }}</span>
+                <span class="fw-medium">{{ document.documentCode }}</span>
               </p>
             </div>
             <div class="col-md-4 text-end">
               <p class="mb-0">
                 <span>Kích thước: </span>
-                <span class="fw-bold">{{
+                <span class="fw-medium">{{
                   document.size | fileSizePipe : "MB"
                 }}</span>
               </p>
               <p class="mb-0">
                 <span>Ngày tạo: </span>
-                <span class="fw-bold">{{
+                <span class="fw-medium">{{
                   document.uploadedDate | date : "dd/MM/yyyy"
                 }}</span>
               </p>
@@ -71,22 +71,22 @@
       <div class="col-6 mb-2">
         <span class="span-heading-color">Tên kế hoạch</span>
         <br />
-        <p class="fw-bold p-content-fs">{{ issue.issueName }}</p>
+        <p class="fw-medium p-content-fs">{{ issue.issueName }}</p>
       </div>
       <div class="col-6 mb-2">
         <span class="span-heading-color">Người tạo</span>
         <br />
-        <p class="fw-bold p-content-fs">{{ issue.account.user.fullName }}</p>
+        <p class="fw-medium p-content-fs">{{ issue.account.user.fullName }}</p>
       </div>
       <div class="col-6 mb-2">
         <span class="span-heading-color">Chi tiết</span>
         <br />
-        <p class="fw-bold p-content-fs">{{ issue.description }}</p>
+        <p class="fw-medium p-content-fs">{{ issue.description }}</p>
       </div>
       <div class="col-6 mb-2">
         <span class="span-heading-color">Ngày tạo</span>
         <br />
-        <p class="fw-bold p-content-fs">
+        <p class="fw-medium p-content-fs">
           {{ issue.createdDate | date : "MM/dd/yyyy" }}
         </p>
       </div>
@@ -113,32 +113,32 @@
             >
               <div class="col-md-8">
                 <p class="mb-0 document-name">
-                  <span class="fw-bold span-doc-name">{{
+                  <span class="fw-medium span-doc-name">{{
                     document.documentName
                   }}</span>
-                  <span class="fw-bold">.pdf</span>
+                  <span class="fw-medium">.pdf</span>
                 </p>
                 <p class="mb-0">
                   <span>Loại tài liệu: </span>
-                  <span class="fw-bold">{{
+                  <span class="fw-medium">{{
                     document.documentType.documentTypeName
                   }}</span>
                 </p>
                 <p class="mb-0">
                   <span>Mã tài liệu: </span>
-                  <span class="fw-bold">{{ document.documentCode }}</span>
+                  <span class="fw-medium">{{ document.documentCode }}</span>
                 </p>
               </div>
               <div class="col-md-4 text-end">
                 <p class="mb-0">
                   <span>Kích thước: </span>
-                  <span class="fw-bold">{{
+                  <span class="fw-medium">{{
                     document.size | fileSizePipe : "MB"
                   }}</span>
                 </p>
                 <p class="mb-0">
                   <span>Ngày tạo: </span>
-                  <span class="fw-bold">{{
+                  <span class="fw-medium">{{
                     document.uploadedDate | date : "dd/MM/yyyy"
                   }}</span>
                 </p>
